[gd_scene load_steps=17 format=2]

[ext_resource path="res://Art Assets/UI/LONGER SCRAP FILL.png" type="Texture" id=1]
[ext_resource path="res://Art Assets/UI/Icon Status Animations/Camera Statuses.tres" type="SpriteFrames" id=2]
[ext_resource path="res://Art Assets/UI/Fonts/TitilliumWeb-Bold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Art Assets/UI/Icon Status Animations/Weapon Statuses.tres" type="SpriteFrames" id=4]
[ext_resource path="res://Art Assets/UI/Icon Status Animations/Engine Statuses.tres" type="SpriteFrames" id=5]
[ext_resource path="res://Art Assets/UI/LONGER FILL.png" type="Texture" id=6]
[ext_resource path="res://Art Assets/UI/LOL BLANK.png" type="Texture" id=7]
[ext_resource path="res://Art Assets/UI/Energy Sniper.png" type="Texture" id=8]
[ext_resource path="res://Art Assets/UI/Gatling Icon.png" type="Texture" id=9]
[ext_resource path="res://Art Assets/UI/Shotgun Icon.png" type="Texture" id=10]
[ext_resource path="res://Art Assets/UI/Rocket Pod.png" type="Texture" id=11]
[ext_resource path="res://Art Assets/UI/LONGER BAR.png" type="Texture" id=12]
[ext_resource path="res://Scripts/HUD/HUD.gd" type="Script" id=13]
[ext_resource path="res://Fonts/UglyDynamicFont.tres" type="DynamicFont" id=14]
[ext_resource path="res://Scenes/HUD/BreakLabel.tscn" type="PackedScene" id=15]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 3 )

[node name="HUD" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 13 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}
break_label = ExtResource( 15 )

[node name="StatsContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Stats" type="VBoxContainer" parent="StatsContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 1004.0
margin_bottom = 580.0

[node name="Heat_Module" type="HBoxContainer" parent="StatsContainer/Stats"]
margin_right = 984.0
margin_bottom = 26.0
custom_constants/separation = 13
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="StatsContainer/Stats/Heat_Module"]
margin_right = 38.0
margin_bottom = 26.0

[node name="Heat Label" type="Label" parent="StatsContainer/Stats/Heat_Module/MarginContainer"]
margin_right = 38.0
margin_bottom = 26.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 0.447059, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "HEAT"
max_lines_visible = 0

[node name="CenterContainer" type="CenterContainer" parent="StatsContainer/Stats/Heat_Module"]
margin_left = 51.0
margin_right = 191.0
margin_bottom = 26.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Heat Bar" type="TextureProgress" parent="StatsContainer/Stats/Heat_Module/CenterContainer"]
margin_top = 3.0
margin_right = 140.0
margin_bottom = 23.0
value = 70.0
texture_under = ExtResource( 12 )
texture_progress = ExtResource( 6 )

[node name="Heat_Module2" type="HBoxContainer" parent="StatsContainer/Stats"]
margin_top = 30.0
margin_right = 984.0
margin_bottom = 56.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Scrap Label" type="Label" parent="StatsContainer/Stats/Heat_Module2"]
margin_right = 47.0
margin_bottom = 26.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.541176, 0.823529, 0.85098, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "SCRAP"
align = 1
valign = 1
max_lines_visible = 0

[node name="CenterContainer" type="CenterContainer" parent="StatsContainer/Stats/Heat_Module2"]
margin_left = 51.0
margin_right = 191.0
margin_bottom = 26.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Scrap Bar" type="TextureProgress" parent="StatsContainer/Stats/Heat_Module2/CenterContainer"]
margin_top = 3.0
margin_right = 140.0
margin_bottom = 23.0
max_value = 140.0
value = 20.0
texture_under = ExtResource( 12 )
texture_progress = ExtResource( 1 )

[node name="States" type="HBoxContainer" parent="StatsContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 1004.0
margin_bottom = 580.0
alignment = 2

[node name="Alerts" type="VBoxContainer" parent="StatsContainer/States"]
margin_left = 984.0
margin_right = 984.0
margin_bottom = 560.0

[node name="Quadrant" type="VBoxContainer" parent="StatsContainer/States/Alerts"]
visible = false
margin_right = 128.0
margin_bottom = 62.0
alignment = 2

[node name="Statuses" type="VBoxContainer" parent="StatsContainer/States/Alerts/Quadrant"]
margin_right = 128.0
margin_bottom = 62.0

[node name="Status Label" type="Label" parent="StatsContainer/States/Alerts/Quadrant/Statuses"]
margin_right = 128.0
margin_bottom = 26.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.87451, 1, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "STATUS"
align = 1
valign = 1
max_lines_visible = 0

[node name="LOL_BLANK" type="TextureRect" parent="StatsContainer/States/Alerts/Quadrant/Statuses"]
margin_top = 30.0
margin_right = 128.0
margin_bottom = 62.0
texture = ExtResource( 7 )

[node name="Camera" type="AnimatedSprite" parent="StatsContainer/States/Alerts/Quadrant/Statuses"]
position = Vector2( 45.0903, 46.3438 )
frames = ExtResource( 2 )
animation = "Systems Green"

[node name="Engine" type="AnimatedSprite" parent="StatsContainer/States/Alerts/Quadrant/Statuses"]
position = Vector2( 91.1658, 46.2747 )
frames = ExtResource( 5 )
animation = "Systems Green"

[node name="WeaponsContainer" type="MarginContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -60.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="WeaponsContainer"]
margin_right = 1024.0
margin_bottom = 60.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Gatling" type="VBoxContainer" parent="WeaponsContainer/HBoxContainer"]
margin_left = 460.0
margin_right = 492.0
margin_bottom = 60.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Gatling Icon" type="TextureRect" parent="WeaponsContainer/HBoxContainer/Gatling"]
margin_right = 32.0
margin_bottom = 32.0
texture = ExtResource( 9 )

[node name="Weapon Status" type="AnimatedSprite" parent="WeaponsContainer/HBoxContainer/Gatling/Gatling Icon"]
position = Vector2( 17.3069, 33.6425 )
frames = ExtResource( 4 )
animation = "Green"

[node name="HotkeyLabel1" type="Label" parent="WeaponsContainer/HBoxContainer/Gatling"]
margin_top = 36.0
margin_right = 32.0
margin_bottom = 60.0
custom_fonts/font = ExtResource( 14 )
text = "1"
align = 1

[node name="Shotgun" type="VBoxContainer" parent="WeaponsContainer/HBoxContainer"]
margin_left = 496.0
margin_right = 528.0
margin_bottom = 60.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Shotgun Icon" type="TextureRect" parent="WeaponsContainer/HBoxContainer/Shotgun"]
margin_right = 32.0
margin_bottom = 32.0
texture = ExtResource( 10 )

[node name="Weapon Status" type="AnimatedSprite" parent="WeaponsContainer/HBoxContainer/Shotgun/Shotgun Icon"]
position = Vector2( 17.3069, 33.6425 )
frames = ExtResource( 4 )
animation = "Green"

[node name="HotkeyLabel2" type="Label" parent="WeaponsContainer/HBoxContainer/Shotgun"]
margin_top = 36.0
margin_right = 32.0
margin_bottom = 60.0
custom_fonts/font = ExtResource( 14 )
text = "2"
align = 1

[node name="Energy Rifle" type="VBoxContainer" parent="WeaponsContainer/HBoxContainer"]
margin_left = 532.0
margin_right = 564.0
margin_bottom = 60.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Energy Rifle Icon" type="TextureRect" parent="WeaponsContainer/HBoxContainer/Energy Rifle"]
margin_right = 32.0
margin_bottom = 32.0
texture = ExtResource( 8 )

[node name="Weapon Status" type="AnimatedSprite" parent="WeaponsContainer/HBoxContainer/Energy Rifle/Energy Rifle Icon"]
position = Vector2( 17.3069, 33.6425 )
frames = ExtResource( 4 )
animation = "Green"

[node name="HotkeyLabel3" type="Label" parent="WeaponsContainer/HBoxContainer/Energy Rifle"]
margin_top = 36.0
margin_right = 32.0
margin_bottom = 60.0
custom_fonts/font = ExtResource( 14 )
text = "3"
align = 1

[node name="Rocket Pod" type="VBoxContainer" parent="WeaponsContainer/HBoxContainer"]
visible = false
margin_left = 550.0
margin_right = 582.0
margin_bottom = 60.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Rocket Pod Icon" type="TextureRect" parent="WeaponsContainer/HBoxContainer/Rocket Pod"]
margin_right = 32.0
margin_bottom = 32.0
texture = ExtResource( 11 )

[node name="Weapon Status" type="AnimatedSprite" parent="WeaponsContainer/HBoxContainer/Rocket Pod/Rocket Pod Icon"]
position = Vector2( 17.3069, 33.6425 )
frames = ExtResource( 4 )
animation = "Green"

[node name="HotkeyLabel4" type="Label" parent="WeaponsContainer/HBoxContainer/Rocket Pod"]
margin_top = 36.0
margin_right = 32.0
margin_bottom = 60.0
custom_fonts/font = ExtResource( 14 )
text = "4"
align = 1

[node name="BreaksContainer" type="MarginContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1.2605
margin_top = 0.630249
margin_right = -1.2605
margin_bottom = 0.630249
custom_constants/margin_right = 15
custom_constants/margin_top = 60
custom_constants/margin_left = -200
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Breaks" type="VBoxContainer" parent="BreaksContainer"]
margin_left = -200.0
margin_top = 60.0
margin_right = -15.0
margin_bottom = 580.0

[node name="BreakLabel" parent="BreaksContainer/Breaks" instance=ExtResource( 15 )]
anchor_right = 0.0
margin_left = 0.0
margin_right = 185.0
